--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -1,9 +1,7 @@
 {% extends "app_base.html" %}
 {% load staticfiles %}
 
-{% block title %}
-Online - NYC CONSTRUCTION SAFETY TRAINING 
-{% endblock %}
+{% block title %} {% endblock %}
 
 {% block content %}
 
