--- a/courses/static/css/style.css
+++ b/courses/static/css/style.css
@@ -466,8 +466,8 @@ input:focus, textarea:focus {
   z-index: 1;
   width: 100%;
   height: 40px;
-  background-color: #f7f7f7;
-  border-bottom: 1px solid #ebebeb;
+  background-color: #252525;
+  border-bottom: 1px solid #252525;
 }
 
 .top-header-area .contact-info {
@@ -480,9 +480,9 @@ input:focus, textarea:focus {
   height: 40px;
   padding: 0 30px;
   line-height: 40px;
-  color: rgba(0, 0, 0, 0.3);
+  color: rgb(255 255 255);
   font-size: 12px;
-  border-right: 1px solid #ebebeb;
+  border-right: 1px solid #4342427d;
 }
 
 .top-header-area .contact-info a span {
@@ -490,7 +490,7 @@ input:focus, textarea:focus {
 }
 
 .top-header-area .contact-info a:hover, .top-header-area .contact-info a:focus {
-  color: #1b1b1b;
+  color:rgb(205 132 59);
 }
 
 @media only screen and (max-width: 767px) {
@@ -519,29 +519,18 @@ input:focus, textarea:focus {
   z-index: 1;
 }
 
-.top-header-area .follow-us span {
-  display: inline-block;
-  height: 40px;
-  padding: 0 20px;
-  line-height: 40px;
-  color: rgba(0, 0, 0, 0.3);
-  font-size: 12px;
-  text-transform: uppercase;
-}
-
 .top-header-area .follow-us a {
   display: inline-block;
   height: 40px;
   padding: 0 20px;
   line-height: 40px;
-  color: rgba(0, 0, 0, 0.3);
+  color: rgb(255 255 255);
   font-size: 12px;
-  border-left: 1px solid #ebebeb;
-}
-
-.top-header-area .follow-us a span {
+  border-right: 1px solid #4342427d;
+  background: #d16112;
   text-transform: uppercase;
 }
+
 
 .top-header-area .follow-us a:hover, .top-header-area .follow-us a:focus {
   color: #1b1b1b;
