--- a/app_public/templates/legal/legal.html
+++ b/app_public/templates/legal/legal.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="regular-page-area section-padding-50">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="page-content">
