--- a/app_public/templates/legal/legal.html
+++ b/app_public/templates/legal/legal.html
@@ -90,23 +90,18 @@
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-                                    <p>NYCCST does not tolerate discrimination, nor tolerate explicit references of a
-                                        discriminatory nature, based on gender, gender identity, gender expression,
-                                        race, nationality, color, religion, age, disability, veteran status,
-                                        socioeconomic status, marital status, pregnancy, and/or sexual orientation. .
+
+                                    <p >
+                                        NYC Construction Safety Training, LLC does not tolerate discrimination, nor
+                                        tolerate
+                                        explicit references of a discriminatory nature, based on gender, gender
+                                        identity, gender
+                                        expression, race, national origin, color, religion, age, disability, veteran
+                                        status,
+                                        socioeconomic status, marital status, pregnancy, and/or sexual orientation.
                                     </p>
 
-                                    <p>Harassment and/or intimidation based on any protected characteristic is strictly
-                                        prohibited. All the following are considered harassment and/or intimidation:
-                                        Written communications, verbal communications, or physical gestures or behavior
-                                        that shows hostility, aversion, or bigotry toward an individual. Sexual
-                                        harassment in the form of written, physical, and/or verbal communications or
-                                        behavior is also prohibited. . </p>
 
-                                    <p> Incidents of harassment should be immediately reported to an administrator of
-                                        the organization who will promptly arrange an internal investigation regarding
-                                        the matter. NYCCST prohibits acts of retaliation against individuals who report
-                                        or cooperate with investigations of harassment and discrimination cases. </p>
 
                                 </div>
                             </div>
@@ -184,10 +179,10 @@
 {% block scripts %}
 
 <style>
-.accordion .btn-link:hover {
-    text-decoration:none;
-    color:#d16112 !important;
-}
+    .accordion .btn-link:hover {
+        text-decoration: none;
+        color: #d16112 !important;
+    }
 </style>
 
 <script>
