--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -88,7 +88,7 @@
                                     </ul>
                                 </li>
 
-                                <li><a href="/">About Us</a></li>
+                                <li><a href="/about">About Us</a></li>
                                 <li><a href="/">Contact Us</a></li>
 
                             </ul>
