--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -120,12 +120,12 @@
                         <form action="{% url "student_enroll_course" %}" method="post">
                             {{ enroll_form }}
                             {% csrf_token %}
-                            <input type="submit" class="btn btn-success mb-30" value="Enroll now">
+                            <input type="submit" class="btn btn-success mb-30" value="Take Free Class">
                         </form>
                     </div>
                     {% else %}
                     <a href="{% url "student_registration" %}" class="btn clever-btn mb-30">
-                        Register to enroll
+                        Register to Take Free Class
                     </a>
                     {% endif %}
 
