--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -89,7 +89,7 @@
                                 </li>
 
                                 <li><a href="/about">About Us</a></li>
-                                <li><a href="/">Contact Us</a></li>
+                                <li><a href="/contact">Contact Us</a></li>
 
                             </ul>
 
