--- a/app_quiz/templates/module-quiz.html
+++ b/app_quiz/templates/module-quiz.html
@@ -1,5 +1,7 @@
 {% extends "teacher_base.html" %}
 {% load i18n %}
+{% load staticfiles %}
+
 {% block title %}
 {% trans 'Add Quiz' %}
 {% endblock %}
